--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@
 # Only variables prefixed with VITE_ will be exposed to your code
 VITE_DEV_API_BASE_URL=http://localhost:8080
 # Add URL to your deployed backend
-VITE_PROD_API_BASE_URL=https://react-router-security.vercel.app/
+VITE_PROD_API_BASE_URL=jdbc:mysql://98.71.184.76:3306/recipe_db
